--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div>
 
 
-<audio id="demo" src="Va%20Vao%20Giai%20Dieu%20Nay%20-%20RPT%20MCK.mp3"></audio>
+<audio id="demo" src="VaVaoGiaiDieuNay-RPTMCK.mp3"></audio>
 
 </body>
 <script src="canvas.js"></script>
